--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 	<title></title>
 
 	<link rel="stylesheet" href="css/style.css">
-
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet"> 
 	<!--[if lte IE 9]>
 		<link rel="stylesheet" href="css/ie.css">
@@ -15,70 +15,61 @@
 	<![endif]-->
 </head>
 
-
 <body>
+  <section>
+    <div class="container">
+            <div class="player__loader">
+              
+            </div>
+      <div class="video_container">
+                <iframe width="516" height="315" src="https://www.youtube.com/embed/gbTSl88k5pk" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="scroll_video">
+        <p>Мои Видеозвписи</p>
 
-  <div class="player">
-    <div class="main_video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/gbTSl88k5pk" frameborder="0" allowfullscreen></iframe>
-    </div>
-      <section>
-      <p>Мои Видеозвписи</p>
-
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+          <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+         <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+         <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+          <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+          <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+          <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+          <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+          <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+         <a href="">Лето кончилось</a>
         </div>
         <div class="more_video cf">
           <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <span>Лето кончилось</span>
-          <p>Просмотров 22345</p>
+         <a href="">Лето кончилось</a>
         </div>
+      </div>
     </div>
   </section>
 </body>
 
-
-</body>
 </html>
