--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet"> 
+
 	<!--[if lte IE 9]>
 		<link rel="stylesheet" href="css/ie.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -16,60 +16,75 @@
 </head>
 
 <body>
-  <section>
-    <div class="container">
-            <div class="player__loader">
-              
-            </div>
-      <div class="video_container">
-                <iframe width="516" height="315" src="https://www.youtube.com/embed/gbTSl88k5pk" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <div class="scroll_video">
-        <p>Мои Видеозвписи</p>
-
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-         <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-         <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-          <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-         <a href="">Лето кончилось</a>
-        </div>
-        <div class="more_video cf">
-          <a href="#"><img src="img/mainPic.png" alt=""></a>
-         <a href="">Лето кончилось</a>
-        </div>
-      </div>
+<div class="video_player">
+  <div class="main_video">
+    <iframe src="https://www.youtube.com/embed/gbTSl88k5pk" frameborder="0" width="700" height="400"></iframe>
+  </div>
+  <div class="scroll_video">
+    <p>Мои Видеозаписи</p>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
     </div>
-  </section>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+  </div>
+  <div class="content_title">
+    <p>Видеокурс ReactJS Essential. Урок 1. Введение в React</p>
+      <img src="https://pp.vk.me/c633717/v633717934/2f909/STIguBzGx98.jpg" alt="">
+      <div class="link">
+      <a href="#">ITC | сообщество программистов</a>
+      <span>
+      23 фев 2016 в 16:33 через YouTube •
+      1 189 просмотров 
+      </span>  
+      </div>
+      <ul>
+        <li><button>Мне нравится 127</button></li>
+        <li class="share">Поделиться</li>
+        <li class="add">Добавлено</li>
+        <li>Еще</li>
+      </ul>
+      </div>
+  <div class="adds_video">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis labore dolores voluptatibus perspiciatis corrupti, consectetur in aut, molestias vel ratione commodi at ipsum autem officia mollitia, quas inventore minima laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis architecto, atque placeat recusandae. Cupiditate minima, perferendis distinctio. Reprehenderit nobis distinctio, aut voluptas at delectus laborum quod id facere, dolore dicta! </p>
+  </div>
+  <div class="comment_block"></div>
+</div>
 </body>
 
 </html>
