--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,6 +63,9 @@
       <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
     </div>
   </div>
+
+
+
   <div class="content_title">
     <p>Видеокурс ReactJS Essential. Урок 1. Введение в React</p>
       <img src="https://pp.vk.me/c633717/v633717934/2f909/STIguBzGx98.jpg" alt="">
@@ -79,11 +82,63 @@
         <li class="add">Добавлено</li>
         <li>Еще</li>
       </ul>
-      </div>
-  <div class="adds_video">
+        <div class="adds_video">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis labore dolores voluptatibus perspiciatis corrupti, consectetur in aut, molestias vel ratione commodi at ipsum autem officia mollitia, quas inventore minima laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis architecto, atque placeat recusandae. Cupiditate minima, perferendis distinctio. Reprehenderit nobis distinctio, aut voluptas at delectus laborum quod id facere, dolore dicta! </p>
   </div>
-  <div class="comment_block"></div>
+
+
+   <div class="comment_bloc_comment">
+      <img src="https://pp.vk.me/c317926/v317926936/7930/YHZebP1MNj0.jpg" alt="">
+      <div class="comment_block_inline">
+        <span class="nick_name">Логический Тупик</span>
+        <span class="message">Возьмите на работу я научусь обещаю</span>
+        <span class="comment_date">21 марта 2007<a href="#">Ответить</a></span>
+      </div>
+    </div>
+    <div class="comment_bloc_comment">
+      <img src="https://pp.vk.me/c317926/v317926936/7930/YHZebP1MNj0.jpg" alt="">
+      <div class="comment_block_inline">
+        <span class="nick_name">Логический Тупик</span>
+        <span class="message">Возьмите на работу я научусь обещаю</span>
+        <span class="comment_date">21 марта 2007<a href="#">Ответить</a></span>
+      </div>
+    </div>
+    <div class="comment_bloc_comment">
+      <img src="https://pp.vk.me/c317926/v317926936/7930/YHZebP1MNj0.jpg" alt="">
+      <div class="comment_block_inline">
+        <span class="nick_name">Логический Тупик</span>
+        <span class="message">Возьмите на работу я научусь обещаю</span>
+        <span class="comment_date">21 марта 2007<a href="#">Ответить</a></span>
+      </div>
+    </div>
+
+    <div class="comment_bloc_comment last">
+      <img src="https://pp.vk.me/c317926/v317926936/7930/YHZebP1MNj0.jpg" alt="">
+      <div class="comment_block_inline"><span class="comment">Написать комментарий...</span></div>
+    </div>
+
+      </div>
+
+
+        <div class="comment_block">
+    <p>Другие видео</p>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+ 
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+    <div class="preview">
+      <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
+      <div class="description"><span>Видеокурс React.js essential</span><span class="cnt">Просмотров 112200</span></div>
+    </div>
+     </div>
+
+
+ 
 </div>
 </body>
 
