--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+<div class="player__loader">
+  <img src="img/5-1.gif" alt="">
+</div>
 <div class="video_player">
   <div class="main_video">
     <iframe src="https://www.youtube.com/embed/gbTSl88k5pk" frameborder="0" width="700" height="400"></iframe>
@@ -116,11 +119,20 @@
       <img src="https://pp.vk.me/c317926/v317926936/7930/YHZebP1MNj0.jpg" alt="">
       <div class="comment_block_inline"><span class="comment">Написать комментарий...</span></div>
     </div>
-
+    <div class="comment_bloc_comment">
+      <ul>
+        <li class="photo"></li>
+        <li class="video"></li>
+        <li class="audio"></li>
+        <li class="doc"></li>
+      </ul>
+      <button>Отмена</button>
+      <button>Отправить</button>
+    </div>
       </div>
 
 
-        <div class="comment_block">
+        <div class="other_videos">
     <p>Другие видео</p>
     <div class="preview">
       <img src="https://cs7051.vk.me/c631624/u19465981/video/l_9fa7f3f3.jpg" alt="">
